<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/fTypeAndFeel">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/workoutTypeTextView_v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/question_workout_type_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/workoutTypeSpinner_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="39dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/instructionTextView_v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/rating_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/likeTextView_v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="How much do you like doing the workout?"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/radioGroup1_v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio0_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/one" />

            <RadioButton
                android:id="@+id/radio1_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <RadioButton
                android:id="@+id/radio2_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <RadioButton
                android:id="@+id/radio3_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <RadioButton
                android:id="@+id/radio4_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <RadioButton
                android:id="@+id/radio5_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />

            <RadioButton
                android:id="@+id/radio6_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven" />
        </RadioGroup>

        <TextView
            android:id="@+id/funTextView_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="How much fun is the workout?"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/RadioGroup01_v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RadioButton06_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/one" />

            <RadioButton
                android:id="@+id/RadioButton04_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <RadioButton
                android:id="@+id/RadioButton05_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <RadioButton
                android:id="@+id/RadioButton03_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <RadioButton
                android:id="@+id/RadioButton02_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <RadioButton
                android:id="@+id/RadioButton01_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />

            <RadioButton
                android:id="@+id/RadioButton07_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven" />
        </RadioGroup>

        <TextView
            android:id="@+id/tiredTextView_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="How tired does it make you?"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <RadioGroup
            android:id="@+id/RadioGroup04_v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/RadioButton28_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/one" />

            <RadioButton
                android:id="@+id/RadioButton22_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two" />

            <RadioButton
                android:id="@+id/RadioButton23_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three" />

            <RadioButton
                android:id="@+id/RadioButton26_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/four" />

            <RadioButton
                android:id="@+id/RadioButton25_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/five" />

            <RadioButton
                android:id="@+id/RadioButton27_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/six" />

            <RadioButton
                android:id="@+id/RadioButton24_v1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seven" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="48dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/minutesTextView_v1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/question_minutes_text_view"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_v1"
            android:layout_width="78dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="0"
            android:ems="6"
            android:inputType="number" >

            <requestFocus />
        </EditText>
    </LinearLayout>

</RelativeLayout>