<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/drawerLayout"
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
	>
    
    <FrameLayout android:id="@+id/mainContent"
        android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/white"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/homePageImageView"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_gravity="top"
            android:scaleType="fitXY"
            android:src="@drawable/ilovedance" />

        <LinearLayout
            android:id="@+id/linearLayoutBar"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:background="@drawable/darkgray"
            
            android:orientation="vertical" >

        	<LinearLayout
            	android:id="@+id/linearLayoutLevel"
            	android:layout_width="fill_parent"
            	android:layout_height="0dp"
            	android:layout_weight="1"
            	android:orientation="horizontal" >

            	<TextView
            	    android:id="@+id/levelView"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_marginTop="8dp"
            	    android:layout_marginBottom="0dp"
            	    android:layout_marginLeft="30dp"
            	    android:text="Level"
            	    android:textColor="@drawable/white"
            	    android:textSize="5sp" />

            	<TextView
            	    android:id="@+id/levelNumberView"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_marginTop="8dp"
            	    android:layout_marginBottom="0dp"
            	    android:text=""
            	    android:textColorLink="@drawable/white"
            	    android:textSize="5sp" />

        	</LinearLayout>

        	<ProgressBar
            	android:id="@+id/progressBar"
            	style="?android:attr/progressBarStyleHorizontal"
            	android:layout_width="320dip"
            	android:layout_height="0dp"
          
            	android:minHeight="10dip"
            	android:maxHeight="10dip"
            	android:layout_gravity="center_horizontal"
            	android:layout_weight="1"
            	android:max="100"
            	android:progress="50" />

        	<TextView
            	android:id="@+id/nextLevelView"
            	android:layout_width="wrap_content"
            	android:layout_height="0dp"
            	android:layout_marginBottom="10dp"
            	android:layout_marginLeft="10dp"
            	android:layout_weight="1"
            	android:gravity="center"
            	android:text=""
            	android:textColor="@drawable/white"
            	android:textSize="6sp" />
		</LinearLayout>
		<LinearLayout
            	android:id="@+id/linearLayoutPrize"
            	android:layout_width="fill_parent"
            	android:layout_height="0dp"
            	android:layout_weight="1"
            	android:orientation="horizontal" >
				
		    	<ImageView
            		android:id="@+id/prizeImageView"
            		android:layout_width="80dp"
            		android:layout_height="100dp"
            		android:layout_gravity="top"
            		android:scaleType="fitXY"
            		android:src="@drawable/prize" />
            	<TextView
            	    android:id="@+id/prizeTextView"
            	    android:layout_width="wrap_content"
            	    android:layout_height="wrap_content"
            	    android:layout_marginTop="25dp"
            	    android:layout_marginLeft="20dp"
            	    android:text="achievement"
            	    android:textSize="5sp" />

        	</LinearLayout>
        <Button
            android:id="@+id/preWorkoutButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            
            android:onClick="onPrevButtonClick"
            android:text="@string/previous_workout_button" />

        <Button
            android:id="@+id/newWorkoutButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:onClick="onNewButtonClick"
            android:text="@string/new_workout_button" />

        <Button
            android:id="@+id/showProgressButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:onClick="onProgressButtonClick"
            android:text="@string/show_progress_button" />

        <!-- uncomment this block of code for testing (autogenerates workouts) -->
        <!-- <Button -->
        <!-- android:id="@+id/dummy" -->
        <!-- android:layout_width="wrap_content" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_alignParentBottom="true" -->
        <!-- android:layout_centerHorizontal="true" -->
        <!-- android:layout_gravity="center_horizontal" -->
        <!-- android:background="@drawable/custom_button" -->
        <!-- android:onClick="onDummyClick" -->
        <!-- android:text="TEST ME" /> -->
    </LinearLayout>
    </FrameLayout>    	
    
    <ListView 
        android:id="@+id/drawerList"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
		android:background="#B333b5e5"
        
       >
    </ListView>
    
</android.support.v4.widget.DrawerLayout>        	


